Kernel NULL pointer dereference while testing Radeon - HDMI Audio with the audio component patch from #1569
I have a clean PC, without any manual/privative driver installation and without any xorg.conf. I'm using xorg session (not wayland) and the kernel was configured with a clean config. This is the default kernel config (enter for all the config questions), except this:
CONFIG_MT7921S=m
CONFIG_MT7921U=m
That was changed to enable the driver support for my really new MT7921U usb wifi device. Here the full config:
After apply the next kernel patches (in that order) created by @tiwai, for introduce the support of the HDMI audio component in the radeon driver:
0001-drm-radeon-Add-HD-audio-component-notifier-support-v4.patch
0001-drm-radeon-Use-a-local-mutex-for-bind-unbind-protect.patch
I am experiencing problems to boot my pc some times, while sometimes the pc boot without any problem. The effect of the issue than i can see is that while the pc is loading, it lost the display signal and then i can not see anything of what is occurring there. This is the dmesg output when the problem occurs:
## LC_MESSAGES=C uname -a
Linux Home-GA-880GM-USB3 6.1.0-rc2-custom #1 SMP PREEMPT_DYNAMIC Sat Oct 29 05:10:18 CDT 2022 x86_64 x86_64 x86_64 GNU/Linux
LC_MESSAGES=C lsb_release -a
No LSB modules are available.
Distributor ID: Ubuntu
Description: Ubuntu 22.04.1 LTS
Release: 22.04
Codename: jammy
LC_MESSAGES=C lspci -nn | grep VGA
01:05.0 VGA compatible controller [0300]: Advanced Micro Devices, Inc. [AMD/ATI] RS880 [Radeon HD 4250] [1002:9715]
LC_MESSAGES=C lscpu
Architecture: x86_64
CPU op-mode(s): 32-bit, 64-bit
Address sizes: 48 bits physical, 48 bits virtual
Byte Order: Little Endian
CPU(s): 6
On-line CPU(s) list: 0-5
Vendor ID: AuthenticAMD
Model name: AMD Phenom(tm) II X6 1100T Processor
CPU family: 16
Model: 10
Thread(s) per core: 1
Core(s) per socket: 6
Socket(s): 1
Stepping: 0
Frequency boost: enabled
CPU max MHz: 3300.0000
CPU min MHz: 800.0000
BogoMIPS: 6628.98
Flags: fpu vme de pse tsc msr pae mce cx8 apic sep mtrr pge mc
a cmov pat pse36 clflush mmx fxsr sse sse2 ht syscall n
x mmxext fxsr_opt pdpe1gb rdtscp lm 3dnowext 3dnow cons
tant_tsc rep_good nopl nonstop_tsc cpuid extd_apicid ap
erfmperf pni monitor cx16 popcnt lahf_lm cmp_legacy svm
extapic cr8_legacy abm sse4a misalignsse 3dnowprefetch
osvw ibs skinit wdt cpb hw_pstate vmmcall npt lbrv svm
_lock nrip_save pausefilter
Virtualization features:
Virtualization: AMD-V
Caches (sum of all):
L1d: 384 KiB (6 instances)
L1i: 384 KiB (6 instances)
L2: 3 MiB (6 instances)
L3: 36 MiB (6 instances)
NUMA:
NUMA node(s): 1
NUMA node0 CPU(s): 0-5
Vulnerabilities:
Itlb multihit: Not affected
L1tf: Not affected
Mds: Not affected
Meltdown: Not affected
Mmio stale data: Not affected
Retbleed: Not affected
Spec store bypass: Not affected
Spectre v1: Mitigation; usercopy/swapgs barriers and __user pointer
sanitization
Spectre v2: Mitigation; Retpolines, STIBP disabled, RSB filling, PB
RSB-eIBRS Not affected
Srbds: Not affected
Tsx async abort: Not affected
LC_MESSAGES=C sudo dmidecode --type 17
# dmidecode 3.3
Getting SMBIOS data from sysfs.
SMBIOS 2.4 present.
Handle 0x0026, DMI type 17, 27 bytes
Memory Device
Array Handle: 0x0025
Error Information Handle: Not Provided
Total Width: 64 bits
Data Width: 64 bits
Size: 4 GB
Form Factor: DIMM
Set: None
Locator: A0
Bank Locator: Bank0/1
Type: Unknown
Type Detail: None
Speed: 1333 MT/s
Manufacturer: None
Serial Number: None
Asset Tag: None
Part Number: None
Handle 0x0027, DMI type 17, 27 bytes
Memory Device
Array Handle: 0x0025
Error Information Handle: Not Provided
Total Width: 64 bits
Data Width: 64 bits
Size: 4 GB
Form Factor: DIMM
Set: None
Locator: A1
Bank Locator: Bank2/3
Type: Unknown
Type Detail: None
Speed: 1333 MT/s
Manufacturer: None
Serial Number: None
Asset Tag: None
Part Number: None
Handle 0x0028, DMI type 17, 27 bytes
Memory Device
Array Handle: 0x0025
Error Information Handle: Not Provided
Total Width: 64 bits
Data Width: 64 bits
Size: 4 GB
Form Factor: DIMM
Set: None
Locator: A2
Bank Locator: Bank4/5
Type: Unknown
Type Detail: None
Speed: 1333 MT/s
Manufacturer: None
Serial Number: None
Asset Tag: None
Part Number: None
Handle 0x0029, DMI type 17, 27 bytes
Memory Device
Array Handle: 0x0025
Error Information Handle: Not Provided
Total Width: 64 bits
Data Width: 64 bits
Size: 4 GB
Form Factor: DIMM
Set: None
Locator: A3
Bank Locator: Bank6/7
Type: Unknown
Type Detail: None
Speed: 1333 MT/s
Manufacturer: None
Serial Number: None
Asset Tag: None
Part Number: None
LC_MESSAGES=C sudo apt install read-edid
This is read-edid version 3.0.2. Prepare for some fun.
Attempting to use i2c interface
No EDID on bus 0
No EDID on bus 2
No EDID on bus 3
No EDID on bus 4
1 potential busses found: 1
Checksum Correct
256-byte EDID successfully retrieved from i2c bus 1
Looks like i2c was successful. Have a good day.
Section "Monitor"
Identifier "2D FHD LG TV"
ModelName "2D FHD LG TV"
VendorName "GSM"
# Monitor Manufactured week 1 of 2013
# EDID version 1.3
# Digital Display
DisplaySize 510 290
Gamma 2.20
Option "DPMS" "true"
Horizsync 30-83
VertRefresh 56-75
# Maximum pixel clock is 150MHz
#Not giving standard mode: 1152x864, 75Hz
#Not giving standard mode: 1280x720, 60Hz
#Not giving standard mode: 1280x800, 60Hz
#Not giving standard mode: 1280x1024, 60Hz
#Not giving standard mode: 1440x900, 60Hz
#Not giving standard mode: 1400x1050, 60Hz
#Not giving standard mode: 1600x900, 60Hz
#Not giving standard mode: 1680x1050, 60Hz
#Extension block found. Parsing...
Modeline "Mode 16" 74.25 1280 1336 1472 1650 720 721 726 750 +hsync +vsync
Modeline "Mode 0" 148.50 1920 2008 2052 2200 1080 1084 1089 1125 +hsync -vsync
Modeline "Mode 1" 146.25 1680 1784 1960 2240 1050 1053 1059 1089 -hsync +vsync
Modeline "Mode 2" 74.250 1280 1390 1420 1650 720 725 730 750 +hsync +vsync
Modeline "Mode 3" 74.250 1920 2008 2052 2200 1080 1082 1087 1125 +hsync +vsync interlace
Modeline "Mode 4" 27.027 720 736 798 858 480 489 495 525 -hsync -vsync
Modeline "Mode 5" 27.027 720 736 798 858 480 489 495 525 -hsync -vsync
Modeline "Mode 6" 74.250 1920 2558 2602 2750 1080 1084 1089 1125 +hsync +vsync
Modeline "Mode 7" 74.250 1920 2008 2052 2200 1080 1084 1089 1125 +hsync +vsync
Modeline "Mode 8" 148.500 1920 2008 2052 2200 1080 1084 1089 1125 +hsync +vsync
Modeline "Mode 9" 27.000 720 732 796 864 576 581 586 625 -hsync -vsync
Modeline "Mode 10" 74.250 1280 1720 1760 1980 720 725 730 750 +hsync +vsync
Modeline "Mode 11" 27.000 720 732 796 864 576 581 586 625 -hsync -vsync
Modeline "Mode 12" 74.250 1920 2448 2492 2640 1080 1082 1089 1125 +hsync +vsync interlace
Modeline "Mode 13" 148.500 1920 2448 2492 2640 1080 1084 1089 1125 +hsync +vsync
Modeline "Mode 14" 27.027 1440 1478 1602 1716 480 484 487 525 -hsync -vsync interlace
Modeline "Mode 15" 27.000 1440 1464 1590 1728 576 578 581 625 -hsync -vsync interlace
Modeline "Mode 17" 74.25 1920 2008 2052 2200 540 542 547 562 +hsync +vsync interlace
Modeline "Mode 18" 74.25 1920 2448 2492 2640 540 542 547 562 +hsync +vsync interlace
Modeline "Mode 19" 148.50 1920 1936 2492 2640 1080 1084 1089 1125 +hsync +vsync
Option "PreferredMode" "Mode 16"
EndSection
LC_MESSAGES=C sudo dmidecode -t 2
# dmidecode 3.3
Getting SMBIOS data from sysfs.
SMBIOS 2.4 present.
Handle 0x0002, DMI type 2, 8 bytes
Base Board Information
Manufacturer: Gigabyte Technology Co., Ltd.
Product Name: GA-880GM-USB3
Version:
Serial Number: