drm: radeon: Fix audio get_eld callback

Check the availability of the audio capability and mode config before
going to the loop for avoiding the access to an unusable state.  Also,
change the loop iterations over encoder instead of connector in order
to align with radeon_audio_enable().

Link: https://gitlab.freedesktop.org/drm/amd/-/issues/2236
Signed-off-by: Takashi Iwai <tiwai@suse.de>
Signed-off-by: Alex Deucher <alexander.deucher@amd.com>